docs: Update Docs of swagger
