# src/docs/swagger.json
@@ -31,7 +31,7 @@
                     {
                         "type": "string",
                         "description": "ID of Computer",
-                        "name": "id-computer",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -64,7 +64,7 @@
                     {
                         "type": "string",
                         "description": "ID of Computer",
-                        "name": "id-computer",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -141,7 +141,7 @@
                     {
                         "type": "string",
                         "description": "ID of Computer",
-                        "name": "id-computer",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -176,7 +176,7 @@
                     {
                         "type": "string",
                         "description": "ID of ComputerLab",
-                        "name": "id-computer-lab",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -209,7 +209,7 @@
                     {
                         "type": "string",
                         "description": "ID del item",
-                        "name": "id-computer-lab",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -286,7 +286,7 @@
                     {
                         "type": "string",
                         "description": "ID del item",
-                        "name": "id-computer-lab",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -348,6 +348,120 @@
                         "type": "string",
                         "description": "Length of result",
                         "name": "length",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/computer-labs-user/{user_name}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Computer Lab"
+                ],
+                "summary": "get N items of the computer-lab",
+                "operationId": "get-computer-labs-by-user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User Name",
+                        "name": "user_name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/computer-set-state/{id}": {
+            "put": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Computers"
+                ],
+                "summary": "Set State of Compute",
+                "operationId": "put-computer-set-state",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of Computer",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Schema by Update New Computer",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/schemas.SetStateSchema"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/computers/{id-room}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Computers"
+                ],
+                "summary": "get a item of the computers of Room",
+                "operationId": "get-computers-of-room",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of Room",
+                        "name": "id-room",
                         "in": "path",
                         "required": true
                     }
@@ -454,7 +568,7 @@
                     {
                         "type": "string",
                         "description": "ID of Room",
-                        "name": "id-room",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -487,7 +601,7 @@
                     {
                         "type": "string",
                         "description": "ID of Room",
-                        "name": "id-room",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -564,7 +678,42 @@
                     {
                         "type": "string",
                         "description": "ID of Room",
-                        "name": "id-room",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/rooms/{id-computer-lab}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Rooms"
+                ],
+                "summary": "get a item of the rooms of ComputerLab",
+                "operationId": "get-rooms-of-computer-lab",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of ComputerLab",
+                        "name": "id-computer-lab",
                         "in": "path",
                         "required": true
                     }
@@ -673,7 +822,7 @@
                     {
                         "type": "string",
                         "description": "ID of Student",
-                        "name": "id-student",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -706,7 +855,7 @@
                     {
                         "type": "string",
                         "description": "ID of Students",
-                        "name": "id-student",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -783,7 +932,7 @@
                     {
                         "type": "string",
                         "description": "ID of Student",
-                        "name": "id-student",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -823,10 +972,15 @@
         "schemas.ComputerCreateSchema": {
             "description": "Descripción de la estructura A",
             "type": "object",
+            "required": [
+                "id_room",
+                "name",
+                "type"
+            ],
             "properties": {
                 "id_room": {
-                    "type": "string",
-                    "example": "62dcb6fc-0f68-4a50-9d8c-8fe352b0f7f3"
+                    "type": "integer",
+                    "example": 3
                 },
                 "name": {
                     "type": "string",
@@ -923,7 +1077,7 @@
             ],
             "properties": {
                 "idComputerLab": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "user_name": {
                     "type": "string"
@@ -932,9 +1086,13 @@
         },
         "schemas.RoomCreateSchema": {
             "type": "object",
+            "required": [
+                "id_computer_lab",
+                "name"
+            ],
             "properties": {
                 "id_computer_lab": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
@@ -950,6 +1108,15 @@
                 "name": {
                     "description": "Data",
                     "type": "string"
+                }
+            }
+        },
+        "schemas.SetStateSchema": {
+            "type": "object",
+            "properties": {
+                "id_state": {
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
